--- a/index.html
+++ b/index.html
@@ -116,8 +116,29 @@
       <!--/.container-->
     </header>
     <!--intro section-->
-    
-
+    <section id="intro">
+      <div class="intro__content">
+        <div class="intro__bg">
+          <img
+            src="img/intro/intro__bg.jpg"
+            alt="intro background"
+            class="img wow fadeIn" data-wow-duration="3s"
+          />
+          <div class="bg__text text__center">
+            <div class="container">
+              <h1 class="intro__title">
+                We have Best Medicare plan options for you
+              </h1>
+              <h2 class="intro__subtitle">
+                Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+                accusantium doloremque laudantium.
+              </h2>
+              <a href="" class="bnt">read more</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!--jQuery-->
     <script type="text/javascript" src="js/vendor/jquery-3.3.1.min.js"></script>
     <!--wow animation https://wowjs.uk/-->
