finished intro & create button

--- a/index.html
+++ b/index.html
@@ -122,9 +122,10 @@
           <img
             src="img/intro/intro__bg.jpg"
             alt="intro background"
-            class="img wow fadeIn" data-wow-duration="3s"
+            class="img wow fadeIn"
+            data-wow-duration="3s"
           />
-          <div class="bg__text text__center">
+          <div class="bg__text text__center wow slideInLeft" data-wow-duration="3s">
             <div class="container">
               <h1 class="intro__title">
                 We have Best Medicare plan options for you
@@ -133,12 +134,16 @@
                 Sed ut perspiciatis unde omnis iste natus error sit voluptatem
                 accusantium doloremque laudantium.
               </h2>
-              <a href="" class="bnt">read more</a>
+              <a href="" class="btn">read more</a>
             </div>
           </div>
         </div>
+        <!--/.intro__bg-->
       </div>
+      <!--/.intro__content-->
     </section>
+    <!--Services block-->
+    
     <!--jQuery-->
     <script type="text/javascript" src="js/vendor/jquery-3.3.1.min.js"></script>
     <!--wow animation https://wowjs.uk/-->
