--- a/index.html
+++ b/index.html
@@ -125,7 +125,10 @@
             class="img wow fadeIn"
             data-wow-duration="3s"
           />
-          <div class="bg__text text__center wow slideInLeft" data-wow-duration="3s">
+          <div
+            class="bg__text text__center wow slideInLeft"
+            data-wow-duration="3s"
+          >
             <div class="container">
               <h1 class="intro__title">
                 We have Best Medicare plan options for you
@@ -143,7 +146,47 @@
       <!--/.intro__content-->
     </section>
     <!--Services block-->
-    
+    <div class="services__content" id="services">
+      <div class="services__colum services__colum--1 wow zoomIn" data-wow-duration="2s">
+        <span><i class="fas fa-stethoscope"></i></span>
+        <h3>Best Treatment</h3>
+        <p>
+          Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+          accusantium doloremque laudantium.
+        </p>
+      </div>
+      <div class="services__colum services__colum--2 wow zoomIn" data-wow-duration="2s">
+        <span><i class="fas fa-plus"></i></span>
+        <h3>Emergency Help</h3>
+        <p>
+          Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+          accusantium doloremque laudantium.
+        </p>
+      </div>
+      <div class="services__colum services__colum--3 wow zoomIn" data-wow-duration="2s">
+        <span><i class="fas fa-clinic-medical"></i></span>
+        <h3>Medical Staff</h3>
+        <p>
+          Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+          accusantium doloremque laudantium.
+        </p>
+      </div>
+      <div class="services__colum services__colum--4 wow zoomIn" data-wow-duration="2s">
+        <span><i class="fas fa-user-md"></i></span>
+        <h3>Qualified Doctors</h3>
+        <p>
+          Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+          accusantium doloremque laudantium.
+        </p>
+      </div>
+    </div>
+    <!--/.services__content-->
+    <!--Section why choose us-->
+    <section id="choose__us">
+      <div class="container">
+        
+      </div>
+    </section>
     <!--jQuery-->
     <script type="text/javascript" src="js/vendor/jquery-3.3.1.min.js"></script>
     <!--wow animation https://wowjs.uk/-->
