create header section

--- a/index.html
+++ b/index.html
@@ -147,7 +147,10 @@
     </section>
     <!--Services block-->
     <div class="services__content" id="services">
-      <div class="services__colum services__colum--1 wow zoomIn" data-wow-duration="2s">
+      <div
+        class="services__colum services__colum--1 wow zoomIn"
+        data-wow-duration="2s"
+      >
         <span><i class="fas fa-stethoscope"></i></span>
         <h3>Best Treatment</h3>
         <p>
@@ -155,7 +158,10 @@
           accusantium doloremque laudantium.
         </p>
       </div>
-      <div class="services__colum services__colum--2 wow zoomIn" data-wow-duration="2s">
+      <div
+        class="services__colum services__colum--2 wow zoomIn"
+        data-wow-duration="2s"
+      >
         <span><i class="fas fa-plus"></i></span>
         <h3>Emergency Help</h3>
         <p>
@@ -163,7 +169,10 @@
           accusantium doloremque laudantium.
         </p>
       </div>
-      <div class="services__colum services__colum--3 wow zoomIn" data-wow-duration="2s">
+      <div
+        class="services__colum services__colum--3 wow zoomIn"
+        data-wow-duration="2s"
+      >
         <span><i class="fas fa-clinic-medical"></i></span>
         <h3>Medical Staff</h3>
         <p>
@@ -171,7 +180,10 @@
           accusantium doloremque laudantium.
         </p>
       </div>
-      <div class="services__colum services__colum--4 wow zoomIn" data-wow-duration="2s">
+      <div
+        class="services__colum services__colum--4 wow zoomIn"
+        data-wow-duration="2s"
+      >
         <span><i class="fas fa-user-md"></i></span>
         <h3>Qualified Doctors</h3>
         <p>
@@ -184,7 +196,16 @@
     <!--Section why choose us-->
     <section id="choose__us">
       <div class="container">
-        
+        <div class="section__header text__center mt-6">
+          <h2 class="wow slideInLeft" data-wow-duration="3s">Why Choose Us ?</h2>
+          <h3 class="wow slideInRight" data-wow-duration="3s">
+            Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+            accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
+            quae ab illo inventore veritatis et quasi architecto beatae vitae
+            dicta sunt explicabo.
+          </h3>
+        </div><!--/.section__header-->
+
       </div>
     </section>
     <!--jQuery-->
