create section why choose us

--- a/index.html
+++ b/index.html
@@ -197,16 +197,67 @@
     <section id="choose__us">
       <div class="container">
         <div class="section__header text__center mt-6">
-          <h2 class="wow slideInLeft" data-wow-duration="3s">Why Choose Us ?</h2>
-          <h3 class="wow slideInRight" data-wow-duration="3s">
+          <h2 class="wow fadeIn" data-wow-duration="3s">
+            Why Choose Us ?
+          </h2>
+          <h3 class="wow fadeIn" data-wow-duration="3s">
             Sed ut perspiciatis unde omnis iste natus error sit voluptatem
             accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
             quae ab illo inventore veritatis et quasi architecto beatae vitae
             dicta sunt explicabo.
           </h3>
-        </div><!--/.section__header-->
+        </div>
+        <!--/.section__header-->
+        <div class="us__content">
+          <div class="us__colum wow fadeInLeft" data-wow-duration="3S">
+            <div class="colum__item">
+              <span><i class="fas fa-star-of-life"></i></span>
+              <h4>Professional</h4>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Recusandae quia exercitationem pariatur fugit quidem eveniet
+              accusantium.
+            </p>
+            <div class="colum__item">
+              <span><i class="fas fa-microscope"></i></span>
+              <h4>Laboratory</h4>
+            </div>
+            <p>
+              Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+              accusantium doloremque laudantium.
+            </p>
+          </div>
+          <div
+            class="us__colum us__colum--img wow fadeIn"
+            data-wow-duration="3s"
+          >
+            <img src="img/choose__us/people_bg.jpg" alt="doctor" class="img" />
+          </div>
+          <div class="us__colum wow fadeInRight" data-wow-duration="3s">
+            <div class="colum__item">
+              <span><i class="fas fa-pills"></i></span>
+              <h4>Pills</h4>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam
+              saepe quibusdam, velit veniam aspernatur laboriosam esse
+              inventore?
+            </p>
 
+            <div class="colum__item">
+              <span><i class="fab fa-react"></i></span>
+              <h4>Tecnolygy</h4>
+            </div>
+            <p>
+              Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+              accusantium doloremque laudantium.
+            </p>
+          </div>
+        </div>
+        <!--/.us__content-->
       </div>
+      <!--/.container-->
     </section>
     <!--jQuery-->
     <script type="text/javascript" src="js/vendor/jquery-3.3.1.min.js"></script>
