create block best feature

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             class="us__colum us__colum--img wow fadeIn"
             data-wow-duration="3s"
           >
-            <img src="img/choose__us/people_bg.jpg" alt="doctor" class="img" />
+            <img src="img/choose__us/people_bg.jpg" alt="doctor" />
           </div>
           <div class="us__colum wow fadeInRight" data-wow-duration="3s">
             <div class="colum__item">
@@ -259,6 +259,56 @@
       </div>
       <!--/.container-->
     </section>
+    <!--Best feature block-->
+    <div id="feature" class="feature wow fadeIn" data-wow-duration="3s">
+      <div class="container">
+        <div class="feature__content">
+          <div
+            class="feature__colum wow pulse"
+            data-wow-duration="3s"
+            data-wow-iteration="3"
+          >
+            <i class="fas fa-laptop-medical"></i>
+            <h5 class="feature__count">1000+</h5>
+            <span></span>
+            <p class="text__center">Happy<br />Customers</p>
+          </div>
+          <div
+            class="feature__colum wow pulse"
+            data-wow-duration="3s"
+            data-wow-iteration="3"
+          >
+            <i class="fas fa-heartbeat"></i>
+            <h5 class="feature__count">2020</h5>
+            <span></span>
+            <p class="text__center">Top<br />Hospitality</p>
+          </div>
+          <div
+            class="feature__colum wow pulse"
+            data-wow-duration="3s"
+            data-wow-iteration="3"
+          >
+            <i class="fas fa-helicopter"></i>
+            <h5 class="feature__count">1028</h5>
+            <span></span>
+            <p class="text__center">Innovative<br />Approach</p>
+          </div>
+          <div
+            class="feature__colum wow pulse"
+            data-wow-duration="3s"
+            data-wow-iteration="3"
+          >
+            <i class="far fa-list-alt"></i>
+            <h5 class="feature__count">835+</h5>
+            <span></span>
+            <p class="text__center">Best<br />Services</p>
+          </div>
+        </div>
+        <!--/.feature__content-->
+      </div>
+      <!--/.container-->
+    </div>
+    <!--/.feature-->
     <!--jQuery-->
     <script type="text/javascript" src="js/vendor/jquery-3.3.1.min.js"></script>
     <!--wow animation https://wowjs.uk/-->
