create script count to best feature

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             data-wow-iteration="3"
           >
             <i class="fas fa-laptop-medical"></i>
-            <h5 class="feature__count">1000+</h5>
+            <h5 class="feature__count">1000</h5>
             <span></span>
             <p class="text__center">Happy<br />Customers</p>
           </div>
@@ -299,7 +299,7 @@
             data-wow-iteration="3"
           >
             <i class="far fa-list-alt"></i>
-            <h5 class="feature__count">835+</h5>
+            <h5 class="feature__count">835</h5>
             <span></span>
             <p class="text__center">Best<br />Services</p>
           </div>
@@ -326,5 +326,7 @@
     </script>
     <!--use script add class nav__link--active-->
     <script type="text/javascript" src="js/block/nav__link.js"></script>
+    <!--use script counter to best feature block-->
+    <script type="text/javascript" src="js/block/feature.js"></script>
   </body>
 </html>
