create how we work section

--- a/index.html
+++ b/index.html
@@ -309,6 +309,89 @@
       <!--/.container-->
     </div>
     <!--/.feature-->
+    <!--How We work section-->
+    <section id="weWork">
+      <div class="container">
+        <div class="work__content">
+          <div class="colum__left">
+            <div class="colum__left--header text__left">
+              <h2>How we works</h2>
+              <h3>
+                Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+                accusantium doloremque laudantium.Sed ut perspiciatis unde omnis
+                iste natus error sit voluptatem accusantium doloremque
+                laudantium.
+              </h3>
+            </div>
+            <div class="colum__left--content">
+              <div class="colum__left--colum text__left">
+                <img
+                  src="img/we__work/1_colum.jpg"
+                  alt="doctor"
+                  class="img wow zoomIn"
+                  data-wow-duration="2s"
+                />
+                <h4>Lorem ipsum dolor sit amet.</h4>
+                <p>April 20.2019 &vert; Dr. Jon Doe</p>
+                <span class="colum__coment--item"
+                  >Sed ut perspiciatis unde omnis iste natus error sit
+                  voluptatem accusantium doloremque laudantium.</span
+                >
+                <span class="colum__coment--item"
+                  >Sed ut perspiciatis unde omnis iste natus error sit
+                  voluptatem accusantium doloremque laudantium.</span
+                >
+                <span class="colum__coment--item"
+                  >Sed ut perspiciatis unde omnis iste natus error sit
+                  voluptatem accusantium doloremque laudantium.</span
+                >
+                <span class="colum__coment--item"
+                  >Sed ut perspiciatis unde omnis iste natus error sit
+                  voluptatem accusantium doloremque laudantium.</span
+                >
+              </div>
+              <!--/.colum__left--colum-->
+              <div class="colum__left--colum text__left">
+                <img
+                  src="img/we__work/2_colum.jpg"
+                  alt="doctor"
+                  class="img wow zoomIn"
+                  data-wow-duration="2s"
+                />
+                <h4>Lorem ipsum dolor sit amet.</h4>
+                <p>May 12.2020 &vert; Dr. Jon Smit</p>
+                <span class="colum__coment--item"
+                  >Sed ut perspiciatis unde omnis iste natus error sit
+                  voluptatem accusantium doloremque laudantium.</span
+                >
+                <span class="colum__coment--item"
+                  >Sed ut perspiciatis unde omnis iste natus error sit
+                  voluptatem accusantium doloremque laudantium.</span
+                >
+                <span class="colum__coment--item"
+                  >Sed ut perspiciatis unde omnis iste natus error sit
+                  voluptatem accusantium doloremque laudantium.</span
+                >
+                <span class="colum__coment--item"
+                  >Sed ut perspiciatis unde omnis iste natus error sit
+                  voluptatem accusantium doloremque laudantium.</span
+                >
+              </div>
+              <!--/.colum__left--colum-->
+            </div>
+            <!--/.colum__left--content-->
+            <div class="text__center mt-4">
+              <a href="#" id="WorkComent" class="btn">Read More</a>
+            </div>
+          </div>
+          <!--/.colum__left-->
+          <div class="colum__right"></div>
+          <!--/.colum__right-->
+        </div>
+        <!--/.work__content-->
+      </div>
+      <!--/.container-->
+    </section>
     <!--jQuery-->
     <script type="text/javascript" src="js/vendor/jquery-3.3.1.min.js"></script>
     <!--wow animation https://wowjs.uk/-->
@@ -324,6 +407,7 @@
       });
       wow.init();
     </script>
+    <!--main script to page-->
     <!--use script add class nav__link--active-->
     <script type="text/javascript" src="js/block/nav__link.js"></script>
     <!--use script counter to best feature block-->
