create script show more

--- a/index.html
+++ b/index.html
@@ -333,19 +333,15 @@
                 />
                 <h4>Lorem ipsum dolor sit amet.</h4>
                 <p>April 20.2019 &vert; Dr. Jon Doe</p>
-                <span class="colum__coment--item"
+                <span class="coment__item--left"
                   >Sed ut perspiciatis unde omnis iste natus error sit
                   voluptatem accusantium doloremque laudantium.</span
                 >
-                <span class="colum__coment--item"
+                <span class="coment__item--left"
                   >Sed ut perspiciatis unde omnis iste natus error sit
                   voluptatem accusantium doloremque laudantium.</span
                 >
-                <span class="colum__coment--item"
-                  >Sed ut perspiciatis unde omnis iste natus error sit
-                  voluptatem accusantium doloremque laudantium.</span
-                >
-                <span class="colum__coment--item"
+                <span class="coment__item--left"
                   >Sed ut perspiciatis unde omnis iste natus error sit
                   voluptatem accusantium doloremque laudantium.</span
                 >
@@ -360,19 +356,15 @@
                 />
                 <h4>Lorem ipsum dolor sit amet.</h4>
                 <p>May 12.2020 &vert; Dr. Jon Smit</p>
-                <span class="colum__coment--item"
+                <span class="coment__item--right"
                   >Sed ut perspiciatis unde omnis iste natus error sit
                   voluptatem accusantium doloremque laudantium.</span
                 >
-                <span class="colum__coment--item"
+                <span class="coment__item--right"
                   >Sed ut perspiciatis unde omnis iste natus error sit
                   voluptatem accusantium doloremque laudantium.</span
                 >
-                <span class="colum__coment--item"
-                  >Sed ut perspiciatis unde omnis iste natus error sit
-                  voluptatem accusantium doloremque laudantium.</span
-                >
-                <span class="colum__coment--item"
+                <span class="coment__item--right"
                   >Sed ut perspiciatis unde omnis iste natus error sit
                   voluptatem accusantium doloremque laudantium.</span
                 >
@@ -412,5 +404,7 @@
     <script type="text/javascript" src="js/block/nav__link.js"></script>
     <!--use script counter to best feature block-->
     <script type="text/javascript" src="js/block/feature.js"></script>
+    <!--use script show more coment to we work block-->
+    <script type="text/javascript" src="js/block/show__more.js"></script>
   </body>
 </html>
