create right section with acardeon menu

--- a/index.html
+++ b/index.html
@@ -315,15 +315,20 @@
         <div class="work__content">
           <div class="colum__left">
             <div class="colum__left--header text__left">
-              <h2>How we works</h2>
-              <h3>
+              <h2 class="wow fadeInLeft" data-wow-duration="3s">
+                How we works
+              </h2>
+              <h3 class="wow fadeInLeft" data-wow-duration="3s">
                 Sed ut perspiciatis unde omnis iste natus error sit voluptatem
                 accusantium doloremque laudantium.Sed ut perspiciatis unde omnis
                 iste natus error sit voluptatem accusantium doloremque
                 laudantium.
               </h3>
             </div>
-            <div class="colum__left--content">
+            <div
+              class="colum__left--content wow bounceInUp"
+              data-wow-duration="3s"
+            >
               <div class="colum__left--colum text__left">
                 <img
                   src="img/we__work/1_colum.jpg"
@@ -372,12 +377,69 @@
               <!--/.colum__left--colum-->
             </div>
             <!--/.colum__left--content-->
-            <div class="text__center mt-4">
+            <div class="text__center mt-4 wow fadeIn" data-wow-duration="5s">
               <a href="#" id="WorkComent" class="btn">Read More</a>
             </div>
           </div>
           <!--/.colum__left-->
-          <div class="colum__right"></div>
+          <div class="colum__right text__left">
+            <h2 class="wow fadeInRight" data-wow-duration="3s">Our creative</h2>
+            <h3 class="wow fadeInRight" data-wow-duration="3s">
+              Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+              accusantium doloremque laudantium.Sed ut perspiciatis unde omnis
+              iste natus error sit voluptatem accusantium doloremque laudantium.
+            </h3>
+            <ul class="right__acardeon wow bounceInUp"
+            data-wow-duration="3s" data-acardeon="open">
+              <li class="acardeon__content">
+                <div class="acardeon__header">
+                  <span><i class="fas fa-caret-right"></i></span>
+                </div>
+                <div class="acardeon__body">
+                  Sed ut perspiciatis unde omnis iste natus error s.it
+                  voluptatem accusantium doloremque laudantium.Sed ut
+                  perspiciatis unde omnis iste natus error sit voluptatem
+                  accusanSed ut perspiciatis unde omnis iste natus error s.it
+                  voluptatem accusantium doloremque laudantium.Sed ut
+                  perspiciatis unde omnis iste natus error sit voluptatem
+                  accusantium doloremque laudantium.
+                </div>
+              </li>
+              <li class="acardeon__content">
+                <div class="acardeon__header">
+                  <span><i class="fas fa-caret-right"></i></span>
+                </div>
+                <div class="acardeon__body">
+                  Sed ut perspiciatis unde omnis iste natus error s.it
+                  voluptatem accusantium doloremque laudantium.Sed ut
+                  perspiciatis unde omnis iste natus error sit voluptatem
+                  accusantium doloremque laudantium.
+                </div>
+              </li>
+              <li class="acardeon__content">
+                <div class="acardeon__header">
+                  <span><i class="fas fa-caret-right"></i></span>
+                </div>
+                <div class="acardeon__body">
+                  Sed ut perspiciatis unde omnis iste natus error s.it
+                  voluptatem accusantium doloremque laudantium.Sed ut
+                  perspiciatis unde omnis iste natus error sit voluptatem
+                  accusantium doloremque laudantium.
+                </div>
+              </li>
+              <li class="acardeon__content">
+                <div class="acardeon__header">
+                  <span><i class="fas fa-caret-right"></i></span>
+                </div>
+                <div class="acardeon__body">
+                  Sed ut perspiciatis unde omnis iste natus error s.it
+                  voluptatem accusantium doloremque laudantium.Sed ut
+                  perspiciatis unde omnis iste natus error sit voluptatem
+                  accusantium doloremque laudantium.
+                </div>
+              </li>
+            </ul>
+          </div>
           <!--/.colum__right-->
         </div>
         <!--/.work__content-->
